scripts/nullaway/wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8.txt
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/Main.java:81: error: [NullAway] dereferenced expression board is @Nullable
            int numClues = board.getNumClues();
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:77: error: [NullAway] dereferenced expression other is @Nullable
        this.p = other.p;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:350: error: [NullAway] enhanced-for expression getPeers(x, y) is @Nullable
        for (int cell : getPeers(x, y)) {
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:45: error: [NullAway] dereferenced expression col is @Nullable
        Node row = col.down;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:98: error: [NullAway] dereferenced expression col is @Nullable
        Node row = col.down;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:153: error: [NullAway] dereferenced expression col is @Nullable
        Node row = col.down;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields left (line 12), right (line 12), up (line 12), down (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Node() {
    ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields left (line 12), right (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Node(@org.checkerframework.checker.initialization.qual.FBCBottom @org.checkerframework.checker.nullness.qual.Nullable Node left, @org.checkerframework.checker.initialization.qual.FBCBottom @org.checkerframework.checker.nullness.qual.Nullable Node right, @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Node up, @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Node down, @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull ColumnHeader head) {
    ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.left = left;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.right = right;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:32: error: [NullAway] dereferenced expression board is @Nullable
        columns = new ArrayList<>(board.getNumCells() * board.getSize());
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:114: error: [NullAway] dereferenced expression col is @Nullable
        col.coverLeft();
           ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:134: error: [NullAway] dereferenced expression col is @Nullable
        Node row = col.up;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ColumnHeader.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.constraint = constraint;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DLXGenerator.java:26: error: [NullAway] dereferenced expression board is @Nullable
        for (int col = 0; col < board.getSize(); col++) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TopDownGenerator.java:65: error: [NullAway] dereferenced expression solved is @Nullable
                board.setCell(cell, solved.getCell(cell));
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/DeductionGenerator.java:62: error: [NullAway] dereferenced expression solved is @Nullable
                board.setCell(cell, solved.getCell(cell));
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/DeductionGenerator.java:71: error: [NullAway] dereferenced expression solved is @Nullable
                    board.setCell(cell, solved.getCell(cell));
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/BottomUpGenerator.java:73: error: [NullAway] dereferenced expression options is @Nullable
            } while (board.isSet(cell) || options.cardinality() <= 1);
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoardGenerator.java:38: error: [NullAway] dereferenced expression getBoard() is @Nullable
        final List<Integer> cells = new ArrayList<>(getBoard().getNumCells());
                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoard.java:28: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.board = board;
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoard.java:29: error: [NullAway] dereferenced expression board is @Nullable
        values = new ArrayList<>(board.getNumCells());
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoard.java:98: error: [NullAway] enhanced-for expression board.getPeers(cell) is @Nullable
            for (int peer : board.getPeers(cell)) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoard.java:109: error: [NullAway] enhanced-for expression board.getUnits(cell) is @Nullable
        for (List<Integer> unit : board.getUnits(cell)) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/Test.java:66: error: [NullAway] dereferenced expression prob is @Nullable
        System.out.println("clues = " + prob.getNumClues() + " / " + prob.getNumCells());
                                            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
25 errors
